...
            android:backgroundTint="@color/dark_red"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

        <!-- Logout -->
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:backgroundTint="@color/green"
            android:textColor="@color/white" />

...
