...
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
...
